attached_assets/Pasted--Task-writeDebugAppMetadata-Task-writeDebugSigningConfi_1767644661573.txt
> Task :writeDebugAppMetadata
> Task :writeDebugSigningConfigVersions
> Task :mergeDebugJavaResource
> Task :desugarDebugFileDependencies
> Task :mergeDebugResources
> Task :processDebugResources
/home/runner/work/UnBelievable-Keyboard/UnBelievable-Keyboard/srcs/juloo.keyboard2/widget/ClipboardWidgetService.java:51: error: HistoryEntry is not public in ClipboardHistoryService; cannot be accessed from outside package
        ClipboardHistoryService.HistoryEntry entry = null;
                               ^
/home/runner/work/UnBelievable-Keyboard/UnBelievable-Keyboard/srcs/juloo.keyboard2/widget/ClipboardWidgetService.java:54: error: HistoryEntry is not public in ClipboardHistoryService; cannot be accessed from outside package
            List<ClipboardHistoryService.HistoryEntry> entries = service.get_history_entries();
                                        ^
> Task :compileDebugJavaWithJavac
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
> Task :compileDebugJavaWithJavac FAILED
> Task :mergeExtDexDebug
gradle/actions: Writing build results to /home/runner/work/_temp/.gradle-actions/build-results/__run_2-1767644619770.json
[Incubating] Problems report is available at: file:///home/runner/work/UnBelievable-Keyboard/UnBelievable-Keyboard/build/reports/problems/problems-report.html
FAILURE: Build failed with an exception.
* What went wrong:
Execution failed for task ':compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.
  /home/runner/work/UnBelievable-Keyboard/UnBelievable-Keyboard/srcs/juloo.keyboard2/widget/ClipboardWidgetService.java:51: error: HistoryEntry is not public in ClipboardHistoryService; cannot be accessed from outside package
          ClipboardHistoryService.HistoryEntry entry = null;
                                 ^
  /home/runner/work/UnBelievable-Keyboard/UnBelievable-Keyboard/srcs/juloo.keyboard2/widget/ClipboardWidgetService.java:54: error: HistoryEntry is not public in ClipboardHistoryService; cannot be accessed from outside package
              List<ClipboardHistoryService.HistoryEntry> entries = service.get_history_entries();
                                          ^
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some input files use or override a deprecated API.
  Note: Some input files use unchecked or unsafe operations.
  2 errors
* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.
BUILD FAILED in 23s
32 actionable tasks: 32 executed
Configuration cache entry stored.
Error: Process completed with exit code 1.